# K-BNT-15-grading-server

./: .dockerignore  .gitignore  Dockerfile  README.md  env.sample.json  template.yaml
app/: .pre-commit-config.yaml  Makefile  pyproject.toml
app/src/: main.py
app/src/constant/: __init__.py  aws.py  database.py  google.py  http.py  ncp.py
app/src/core/: config.py
app/src/custom/: __init__.py  answer_types.py  aws_types.py  http_types.py  ncp_types.py  question_types.py
app/src/database/: __init__.py  answer.py  question.py  session.py
app/src/schema/: __init__.py  answer.py  base.py  member.py  question.py
app/src/service/: __init__.py  answer.py  aws.py  clova.py  google.py  readme.txt
app/src/service/model/: vmaf_4k_v0.6.1.json  vmaf_b_v0.6.3.json  vmaf_float_4k_v0.6.1.json  vmaf_float_v0.6.1.json  vmaf_float_v0.6.1.pkl  vmaf_float_v0.6.1neg.json
app/src/service/model/other_models/: model_V8a.model  nflx_v1.json  nflx_v1.pkl  nflx_v1.pkl.model  nflx_vmaff_rf_v1.pkl  nflxall_libsvmnusvr_currentbest.pkl  nflxall_libsvmnusvr_currentbest.pkl.model  nflxall_vmafv2.pkl  nflxall_vmafv2.pkl.model  nflxall_vmafv3.pkl  nflxall_vmafv3.pkl.model  nflxall_vmafv3a.pkl  nflxall_vmafv3a.pkl.model  nflxall_vmafv4.pkl  nflxall_vmafv4.pkl.model  nflxtrain_libsvmnusvr_currentbest.pkl  nflxtrain_norm_type_none.json  nflxtrain_norm_type_none.pkl  nflxtrain_norm_type_none.pkl.model  nflxtrain_vmafv1.pkl.model  nflxtrain_vmafv2.pkl  nflxtrain_vmafv2.pkl.model  nflxtrain_vmafv3.pkl  nflxtrain_vmafv3.pkl.model  nflxtrain_vmafv3a.pkl  nflxtrain_vmafv3a.pkl.model  vmaf_4k_v0.6.1rc.pkl  vmaf_4k_v0.6.1rc.pkl.model  vmaf_v0.6.0.json  vmaf_v0.6.0.pkl  vmaf_v0.6.0.pkl.model  vmaf_v0.6.1mfz.json
app/src/service/model/vmaf_4k_rb_v0.6.2/: vmaf_4k_rb_v0.6.2.json  vmaf_4k_rb_v0.6.2.pkl.0001.model  vmaf_4k_rb_v0.6.2.pkl.0002.model  vmaf_4k_rb_v0.6.2.pkl.0003.model  vmaf_4k_rb_v0.6.2.pkl.0004.model  (+17 more)
app/src/sql/answer/: get_by_object_key.sql  update_answer_status.sql
app/src/util/: __init__.py  soundex.py
(+54 files in other folders)
