[tool.poetry]
name = "k-bnt-15-grading-server"
version = "1"
description = "[ 한국외대 종합설계B4-After ] K-BNT-15 채점 서버"
authors = ["Taehun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.25"
sqlalchemy = "^2.0.15"
mysqlclient = "^2.1.1"
pydantic = "^1.10.7"
konlpy = "^0.6.0"
requests = "^2.28.2"
google-cloud-speech = "^2.19.0"
oauth2client = "^4.1.3"
pydub = "^0.25.1"
ffprobe = "^0.5"
ffmpeg = "^1.4"

[tool.poetry.group.local.dependencies]
localstack = "^2.0.2"
aws-sam-cli = "^1.84.0"

[tool.poetry.group.linter.dependencies]
pre-commit = "^2.21.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
py_version = 39
skip = ["__init__.py"]
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
